# artist

./: .gitignore  Cargo.toml  err.txt
.cargo/: config.toml
crates/artist-agent/: Cargo.toml
crates/artist-agent/src/: add.rs  capture.rs  compaction.rs  conversation.rs  delegate.rs  delegate_jobs.rs  lib.rs  mcp.rs  steering.rs  system_prompt.md  tool_prompt.rs  ttsr.rs  ttsr_tests.rs
crates/artist-agent/src/compaction/: initial.md  turn_prefix.md  update.md
crates/artist-agent/src/resources/: agents.rs  instructions_tool.rs  mod.rs  skill_io.rs  skill_tool.rs  skills.rs  tests.rs
crates/artist-agent/tests/: codex_replay_spike.rs
crates/artist-cli/: Cargo.toml
crates/artist-cli/src/: args.rs  chat_ui.rs  clipboard.rs  command_ui.rs  compaction.rs  custom_commands.rs  extension_control.rs  input_atoms.rs  input_atoms_tests.rs  input_images.rs  interaction.rs  login.rs  main.rs  models.rs  prompt.rs  sessions.rs  settings.rs  slash_commands.rs  startup_splash.rs  status_bar.rs  store.rs  test_provider.rs  tool_ui.rs
crates/artist-extensions/: Cargo.toml
crates/artist-extensions/src/: discovery.rs  events.rs  lib.rs  manager.rs  manifest.rs  runtime.rs
crates/artist-extensions/wit/: extension.wit
crates/artist-rules/: Cargo.toml
crates/artist-rules/src/: declarative.rs  discovery.rs  lib.rs  matcher.rs  retro.rs  state.rs  types.rs  wasm.rs
crates/artist-rules/tests/: wasm_plugin.rs
crates/artist-rules/tests/fixtures/rule-guest/: Cargo.toml
crates/artist-rules/tests/fixtures/rule-guest/src/: lib.rs
crates/artist-rules/wit/: rule-plugin.wit
crates/artist-session/: Cargo.toml
crates/artist-session/src/: attachments.rs  compaction.rs  conversation_replay.rs  convert.rs  event.rs  history.rs  lib.rs  log.rs  memory.rs  recorder.rs  replay.rs
crates/artist-session/src/compaction/: files.rs  serialization.rs  tests.rs  tokens.rs
crates/artist-session/tests/: memory.rs
crates/artist-sessions/: Cargo.toml
crates/artist-sessions/src/: lib.rs
crates/artist-tools/: Cargo.toml
crates/artist-tools/src/: bash.rs  edit.rs  find.rs  grep.rs  lib.rs  output.rs  read.rs  workspace.rs  write.rs
crates/artist-tools/src/workspace/: search_scope.rs
crates/artist-tools/tests/: tools.rs
crates/hashline-tools/: Cargo.toml  FRANKENSTEIN.md
crates/hashline-tools/docs/: mnemonic-anchors.md
crates/hashline-tools/examples/: basic.rs
crates/hashline-tools/src/: agent.rs  coordinator.rs  error.rs  file_tools.rs  lib.rs  mnemonic_anchors.rs  mnemonic_words.txt  state.rs
crates/llm-provider/: Cargo.toml  README.md
crates/llm-provider/src/: chatgpt.rs  error.rs  lib.rs  provider.rs  secret.rs
docs/: architecture.md
