cargo-features = ["profile-rustflags"]

[workspace]
members = [
    "crates/llm-provider",
    "crates/artist-cli",
    "crates/artist-agent",
    "crates/artist-tools",
    "crates/artist-session",
    "crates/hashline-tools",
    "crates/artist-extensions",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.88"

[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
rustflags = ["-Z", "threads=0"]
incremental = true
split-debuginfo = "unpacked"

[profile.profiler]
inherits = "release"
opt-level = 3
overflow-checks = false
debug = "line-tables-only"
split-debuginfo = "unpacked"
strip = false

[profile.product]
inherits = "release"
opt-level = 3
incremental = false
overflow-checks = false
strip = true
lto = "fat"
codegen-units = 1
rustflags = ["-C", "target-cpu=native", "-Z", "tune-cpu=native"]

# Profiling builds: release codegen + debug symbols, separate cache so samply
# runs never invalidate the plain release artifacts.
[profile.release-debug]
inherits = "release"
debug = true
