[package]
name = "artist-agent"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1"
artist-tools = { path = "../artist-tools" }
base64 = "0.22"
dashmap = "6"
dirs = "6"
futures = "0.3"
llm-provider = { path = "../llm-provider" }
rig-core = "0.40.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["sync", "rt", "time"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
