[package]
name = "artist-agent"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1"
artist-tools = { path = "../artist-tools" }
artist-extensions = { path = "../artist-extensions" }
base64 = "0.22"
dashmap = "6"
dirs = "6"
futures = "0.3"
llm-provider = { path = "../llm-provider" }
rig-core = { version = "0.40.0", features = ["rmcp"] }
rmcp = { version = "1.7", features = ["client", "transport-child-process", "transport-streamable-http-client-reqwest"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["sync", "rt", "time"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
