[package]
name = "artist-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "artist"
path = "src/main.rs"

[dependencies]
artist-agent = { path = "../artist-agent" }
artist-extensions = { path = "../artist-extensions" }
artist-tools = { path = "../artist-tools" }
fs2 = "0.4"
ansi-to-tui = "7"
arboard = "3"
anyhow = "1"
charmed-glamour = { version = "0.2", features = ["syntax-highlighting"] }
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
dirs = "6"
llm-provider = { path = "../llm-provider" }
image = { version = "0.25", default-features = false, features = ["gif", "jpeg", "png", "webp"] }
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync", "time", "io-util"] }
toml = "0.9"
unicode-width = "0.2"
url = "2"

[dev-dependencies]
tempfile = "3"
