[package]
name = "artist-extensions"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1"
dirs = "6"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rig-core = "0.40.0"
tokio = { version = "1", features = ["process", "sync", "io-util", "rt"] }
toml = "0.9"
wasmtime = { version = "36.0.2", default-features = false, features = ["async", "component-model", "cranelift", "runtime", "std"] }
wasmtime-wasi = { version = "36.0.2", default-features = false }

[dev-dependencies]
tempfile = "3"
