[package]
name = "artist-rules"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
# Programmable rule plugins (wasmtime component host). Enabled by artist-cli;
# off here so `cargo test -p artist-rules` stays fast.
wasm = ["dep:wasmtime", "dep:wasmtime-wasi"]

[dependencies]
anyhow = "1"
artist-session = { path = "../artist-session" }
dirs = "6"
regex = "1"
rig-core = "0.40.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.9"
wasmtime = { version = "46", optional = true }
wasmtime-wasi = { version = "46", optional = true }

[dev-dependencies]
tempfile = "3"
