[package]
name = "artist-tools"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1"
dashmap = "6"
dirs = "6"
fff-search = "0.9.7-nightly.fce72fa"
globset = "0.4"
nix = { version = "0.29", features = ["signal"] }
hashline-tools = { path = "../hashline-tools" }
portable-pty = "0.9"
regex = "1"
rig-core = "0.40.0"
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
similar = "2"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util", "process", "rt", "sync", "time"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
