[package]
name = "hashline-tools"
version = "0.1.0"
edition = "2021"
description = "Mnemonic line-anchor file tools excised from RealArtist: read/write/edit with hidden line hashes, multi-agent coordinator, and SQLite persistence"
license = "MIT OR Apache-2.0"
readme = "FRANKENSTEIN.md"
keywords = ["agents", "file-edit", "anchors", "hash"]
categories = ["development-tools", "filesystem"]


[dependencies]
anyhow = "1"
blake3 = "1"
fs2 = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "io-util", "sync", "rt", "macros", "time"] }
tempfile = "3"
tree-sitter = "0.25.4"
tree-sitter-rust = "0.24"
uuid = { version = "1", features = ["v4"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[[example]]
name = "basic"
required-features = []
