[package]
name = "llm-provider"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Provider configuration and authentication for OpenAI-compatible LLMs"

[dependencies]
base64 = "0.22"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
url = { version = "2", features = ["serde"] }
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
