# The wasm-rule fixture guest — and the starter template for writing your
# own programmable stream rule.
#
# Build a component with plain cargo (no cargo-component needed):
#
#     rustup target add wasm32-wasip2
#     cargo build --release --target wasm32-wasip2
#
# Then drop the artifact next to a manifest in a rules directory:
#
#     .artist/rules/my-rule.wasm    (the built component, renamed)
#     .artist/rules/my-rule.toml    (description + mandatory prefilter)
[package]
name = "rule-guest"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.46"

# Standalone: not part of the Artist workspace.
[workspace]

[profile.release]
opt-level = "s"
strip = true
